[package]
name = "vcpu-derive"
version = "0.1.0"
authors = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0"

